--- a/src/messenger.yaml
+++ b/src/messenger.yaml
@@ -1,4 +1,4 @@
 server:
-  listenAddress: "0.0.0.0:9101"
+  listen_address: "0.0.0.0:9102"
 client:
-  serverAddress: "127.0.0.1:9101"
+  server_address: "127.0.0.1:9102"
