chore: add saving message to database

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -7,3 +7,6 @@ packages:
   github.com/kolesnikovm/messenger/notifier:
     interfaces:
       MessageSender:
+  github.com/kolesnikovm/messenger/store:
+    interfaces:
+      Messages:
