--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -35,6 +35,14 @@ jobs:
         with:
           go-version: '1.21.x'
 
+      - name: Build
+        working-directory: src
+        run: go build -o messenger
+
+      - name: Setup DB
+        working-directory: src
+        run: messenger migrations up
+
       - name: Test
         working-directory: src
         run: go test -race ./...
