--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_DB=messenger
     volumes:
       - postgres:/var/lib/postgresql/data
     command:
