--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag messenger:$(date +%s)
+        run: docker build . --file Dockerfile --tag messenger:$(git rev-parse --short "$GITHUB_SHA")
         
