--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.x'
+          go-version-file: 'src/go.mod'
+          cache-dependency-path: 'src/go.sum'
 
       - name: Build
         working-directory: src
@@ -50,3 +51,4 @@ jobs:
         env:
           POSTGRES_URL: postgres://postgres:postgres@postgres:5432/messenger
           KAFKA_BROKER_LIST: kafka:9092
+          CGO_ENABLED: 1
