--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -14,6 +14,8 @@ jobs:
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: messenger
+        volumes:
+          - ${{ github.workspace }}/create_database.sql:/docker-entrypoint-initdb.d/create_database.sql
       kafka:
         image: 'bitnami/kafka:latest'
         env:
