--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - kafka:/bitnami/kafka
 
-  ui:
+  kafka-ui:
     image: provectuslabs/kafka-ui:latest
     ports:
       - "8080:8080"
@@ -36,9 +36,9 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data/pgdata
-      - POSTGRES_DB=messenger
     volumes:
       - postgres:/var/lib/postgresql/data
+      - ./create_database.sql:/docker-entrypoint-initdb.d/create_database.sql
     command:
       - "postgres"
       - "-c"
