--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -15,7 +15,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: messenger
         volumes:
-          - ${{ github.workspace }}/create_database.sql:/docker-entrypoint-initdb.d/create_database.sql
+          - ${{ GITHUB_WORKSPACE }}/create_database.sql:/docker-entrypoint-initdb.d/create_database.sql
       kafka:
         image: 'bitnami/kafka:latest'
         env:
