refactor: update test workflow

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -9,16 +9,12 @@ jobs:
     container: golang:1.21.1
 
     services:
-      postgres1:
+      postgres:
         image: postgres:latest
         env:
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: messenger
-      postgres2:
-        image: postgres:latest
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: messenger
+        volumes:
+          - ${{ github.workspace }}/create_database.sql:/docker-entrypoint-initdb.d/create_database.sql
       kafka:
         image: 'bitnami/kafka:latest'
         env:
@@ -41,12 +37,12 @@ jobs:
         working-directory: src
         run: ./messenger migrations up
         env:
-          POSTGRES_URL: postgres://postgres:postgres@postgres1:5432/messenger,postgres://postgres:postgres@postgres2:5432/messenger
+          POSTGRES_URL: postgres://postgres:postgres@postgres:5432/messenger1,postgres://postgres:postgres@postgres:5432/messenger2
           KAFKA_BROKER_LIST: kafka:9092
 
       - name: Test
         working-directory: src
         run: go test -race ./...
         env:
-          POSTGRES_URL: postgres://postgres:postgres@postgres1:5432/messenger,postgres://postgres:postgres@postgres2:5432/messenger
+          POSTGRES_URL: postgres://postgres:postgres@postgres:5432/messenger1,postgres://postgres:postgres@postgres:5432/messenger2
           KAFKA_BROKER_LIST: kafka:9092
