--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,3 +63,8 @@ services:
       - "pg_stat_statements.max=10000"
       - "-c"
       - "pg_stat_statements.track=all"
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
